fix publish bulletin test helper

--- a/resources/private/ui-components/bulletin/publish-bulletin/move-to-proclaimed-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/move-to-proclaimed-template.html
@@ -11,14 +11,16 @@
                                     params: {value: proclamationStartsAt,
                                              lLabel: 'bulletin.proclamation.startsAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'proclamationStartsAt'}}"></div>
       </div>
       <div class="col-1">
         <div data-bind="component: {name: 'date-field',
                                     params: {value: proclamationEndsAt,
                                              lLabel: 'bulletin.proclamation.endsAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'proclamationEndsAt'}}"></div>
       </div>
     </div>
     <div class="row">
