--- a/resources/private/ui-components/bulletin/bulletin-versions/bulletin-versions-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-versions/bulletin-versions-template.html
@@ -1,4 +1,11 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="bulletin-versions-template">
+  <div data-test-id="bulletin-versions-accordion"
+       data-bind="component: {name: 'accordion', params: {ltitle: 'bulletin.versions.history',
+                                                          accordionContentTemplate: 'bulletin-versions-accordion-content',
+                                                          accordionContentTemplateData: $data}}"></div>
 
 </script>
 
+<script class="ko-template" type="text/x-jquery-tmpl" id="bulletin-versions-accordion-content">
+
+</script>
