--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1150,10 +1150,12 @@
                                                              authModel: $root.authorization,
                                                              bulletin: lupapisteApp.services.publishBulletinService.bulletin,
                                                              bulletinStates: LUPAPISTE.config.bulletinStates}}"></div>
+                        <!-- ko if: lupapisteApp.services.publishBulletinService.bulletin() && lupapisteApp.services.publishBulletinService.bulletin().versions.length > 0 -->
                         <div data-bind="component: {name: 'bulletin-versions',
                                                     params: {appId: id,
                                                              authModel: $root.authorization,
                                                              bulletin: lupapisteApp.services.publishBulletinService.bulletin}}"></div>
+                        <!-- /ko -->
                       </div>
                     </div>
 
