--- a/resources/private/ui-components/bulletin/bulletin-versions/bulletin-versions-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-versions/bulletin-versions-template.html
@@ -13,7 +13,7 @@
         <th data-bind="ltext: 'bulletin.versions.published'"></th>
         <th data-bind="ltext: 'bulletin.versions.state'"></th>
         <th data-bind="ltext: 'bulletin.versions.comments'"></th>
-        <th></th>
+        <th colspan="3"></th>
       </tr>
     </thead>
     <tbody data-bind="foreach: versions">
@@ -21,7 +21,9 @@
         <td data-bind="dateString: modified"></td>
         <td data-bind="ltext: 'bulletin.state.' + bulletinState"></td>
         <td data-bind="text: comments ? comments.length : ''"></td>
-        <td></td>
+        <td data-bind="text: 'Muokkaa'"></td>
+        <td data-bind="text: 'Näytä mielipiteet'"></td>
+        <td data-bind="text: 'Näytä hakemus'"></td>
       </tr>
     </tbody>
   </table>
