add "fiseKelpoisuus" into registration view

--- a/resources/private/register/register2.html
+++ b/resources/private/register/register2.html
@@ -84,6 +84,20 @@
                 <label data-bind="ltext: 'userinfo.architect.fise'" for="architect.fise" class="form-label"></label>
                 <input data-bind="value: fise" id="architect.fise" type="text" class="form-input" maxlength="255"/>
               </div>
+
+              <div class="form-entry">
+                <label data-bind="ltext: 'userinfo.architect.fiseKelpoisuus'" for="architect.fiseKelpoisuus" class="form-label"></label>
+                <select class="form-input combobox"
+                        name="architect.fiseKelpoisuus"
+                        data-test-id="architect-fiseKelpoisuus-select"
+                        title="loc('userinfo.architect.fiseKelpoisuus.choose.help')"
+                        data-bind="options: availableFiseKelpoisuusValues,
+                                   value: fiseKelpoisuus,
+                                   optionsValue: 'id',
+                                   optionsText: 'name',
+                                   optionsCaption: loc('userinfo.architect.fiseKelpoisuus.choose')"></select>
+              </div>
+
             </div>
           </div>
         </div>
