--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -87,7 +87,7 @@
           <span data-bind="ltext: 'bulletin.comment.endDate'"></span>
           <span data-bind="dateTimeString: $data.proclamationEndsAt"></span>
         </p>
-        <div data-bind="component: { name: 'bulletin-comment-box', params: { bulletinId: bulletinId, versionId: versionId } }"></div>
+        <div data-bind="component: { name: 'bulletin-comment-box', params: { bulletinId: bulletinId(), versionId: versionId } }"></div>
       </div>
     </script>
   </section>
