--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -14,7 +14,7 @@
                                                    icon: 'lupicon-remove', 
                                                    label: 'remove',
                                                    index: index,
-                                                   clickFn: $parent.removeGroup }},
+                                                   clickFn: $component.removeGroup }},
                              visible: $component.groupsRemovable($data.schema)">
             </span>
           </div>
