--- a/resources/private/ui-components/docgen/table/docgen-table-template.html
+++ b/resources/private/ui-components/docgen/table/docgen-table-template.html
@@ -31,7 +31,7 @@
               <!-- /ko -->
 
               <td class="action-column">
-                <i class="lupicon-remove primary" data-bind="click: $parent.removeGroup,
+                <i class="lupicon-remove primary" data-bind="click: $component.removeGroup,
                                                              visible: $component.groupsRemovable($data.schema)"></i>
               </td>
 
