--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -23,6 +23,7 @@
 
     <meta name="msapplication-config" content="none"/>
 
+    <link id="inject-ie-css"></link>
     <!--[if lt IE 9]>
     <script src="/lib/html5shiv.js"></script>
     <link href="/css/IE8-v1.0.css" rel="stylesheet"></link>
