move resources to lp-static

--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -25,8 +25,8 @@
 
     <link id="inject-ie-css"></link>
     <!--[if lt IE 9]>
-    <script src="/lib/html5shiv.js"></script>
-    <link href="/css/IE8-v1.0.css" rel="stylesheet"></link>
+    <script src="/lp-static/lib/html5shiv.js"></script>
+    <link href="/lp-static/css/IE8-v1.0.css" rel="stylesheet"></link>
     <![endif]-->
 
     <title>Lupapiste</title>
@@ -53,7 +53,7 @@
     <section></section>
     <footer></footer>
 
-    <!--[if lt IE 9]><script src="/lib/borderless-iframes.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/lp-static/lib/borderless-iframes.js"></script><![endif]-->
     <script type="text/x-jquery-tmpl" id="error-template">
       <span class="error-message" data-bind="validationMessage: field"></span>
     </script>
