inject main css

--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -9,6 +9,7 @@
 
     <!-- Cloak content until css is loaded -->
     <style type="text/css">.page{display:none}</style>
+    <link id="main-css" href="/lp-static/css/main.css" rel="stylesheet"></link>
     <link href="inject" rel="stylesheet"></link>
 
     <link rel="icon" href="/img/favicon-v2.png" type="image/png"/>
