publish bulletin robot

--- a/resources/private/ui-components/bulletin/publish-bulletin/move-to-final-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/move-to-final-template.html
@@ -10,7 +10,8 @@
                                     params: {value: officialAt,
                                              lLabel: 'bulletin.verdict.officialAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'officialAt'}}"></div>
       </div>
     </div>
   </div>
