--- a/resources/private/ui-components/bulletin/publish-bulletin/move-to-verdict-given-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/move-to-verdict-given-template.html
@@ -10,21 +10,24 @@
                                     params: {value: verdictGivenAt,
                                              lLabel: 'bulletin.verdict.verdictGivenAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'verdictGivenAt'}}"></div>
       </div>
       <div class="col-1">
         <div data-bind="component: {name: 'date-field',
                                     params: {value: appealPeriodStartsAt,
                                              lLabel: 'bulletin.verdict.appealPeriodStartsAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'appealPeriodStartsAt'}}"></div>
       </div>
       <div class="col-1">
         <div data-bind="component: {name: 'date-field',
                                     params: {value: appealPeriodEndsAt,
                                              lLabel: 'bulletin.verdict.appealPeriodEndsAt',
                                              lPlaceholder: 'choose',
-                                             required: true}}"></div>
+                                             required: true,
+                                             id: 'appealPeriodEndsAt'}}"></div>
       </div>
     </div>
     <div class="row">
