--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1140,18 +1140,11 @@
                     <!-- ko if: selectedTabName() === 'bulletin' && features.enabled('publish-bulletin') -->
                     <div id="application-bulletin-tab" data-bind="with: application" class="tab-content">
                       <div data-bind="attr: {'class': features.enabled('publish-bulletin') ? 'feature' : ''}">
-                        <div data-bind="component: {name: 'publish-application',
+                        <div data-bind="component: {name: 'bulletin-tab',
                                                     params: {appId: id,
                                                              appState: state,
                                                              authModel: $root.authorization,
-                                                             bulletin: lupapisteApp.services.publishBulletinService.bulletin,
-                                                             bulletinStates: LUPAPISTE.config.bulletinStates}}"></div>
-                        <!-- ko if: lupapisteApp.services.publishBulletinService.bulletin() && lupapisteApp.services.publishBulletinService.bulletin().versions.length > 0 -->
-                        <div data-bind="component: {name: 'bulletin-versions',
-                                                    params: {appId: id,
-                                                             authModel: $root.authorization,
-                                                             bulletin: lupapisteApp.services.publishBulletinService.bulletin}}"></div>
-                        <!-- /ko -->
+                                                             bulletinService: lupapisteApp.services.publishBulletinService}}"></div>
                       </div>
                     </div>
 
