--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1138,14 +1138,12 @@
 
                     <!-- Bulletin tab -->
                     <!-- ko if: selectedTabName() === 'bulletin' && features.enabled('publish-bulletin') -->
-                    <div id="application-bulletin-tab" data-bind="with: application" class="tab-content">
-                      <div data-bind="attr: {'class': features.enabled('publish-bulletin') ? 'feature' : ''}">
+                    <div id="application-bulletin-tab" data-bind="with: application, attr: {'class': features.enabled('publish-bulletin') ? 'feature' : ''}" class="tab-content">
                         <div data-bind="component: {name: 'bulletin-tab',
                                                     params: {appId: id,
                                                              appState: state,
                                                              authModel: $root.authorization,
                                                              bulletinService: lupapisteApp.services.publishBulletinService}}"></div>
-                      </div>
                     </div>
 
                     <!-- /ko -->
