pass the authmodel parameter from parent components to all that need it

--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -30,7 +30,8 @@
                                                  path: $data.path,
                                                  i18npath: $component.i18npath,
                                                  applicationId: $component.applicationId,
-                                                 documentId: $component.documentId }}">
+                                                 documentId: $component.documentId,
+                                                 authModel: $component.authModel }}">
           </div>
         </div>
       </div>
