--- a/resources/private/ui-components/docgen/table/docgen-table-template.html
+++ b/resources/private/ui-components/docgen/table/docgen-table-template.html
@@ -30,7 +30,8 @@
                                                     path: $parent.path.concat(name),
                                                     i18npath: i18npath,
                                                     applicationId: applicationId,
-                                                    documentId: documentId }}">
+                                                    documentId: documentId,
+                                                    authModel: $component.authModel }}">
                 </span>
               </td>
               <!-- /ko -->
