show commenting ui only if bulletin can be commented

--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -104,18 +104,20 @@
         </div>
       </div>
       
-      <!-- ko if: authenticated -->
-      <div data-bind="component: { name: 'bulletin-comment',
-                                   params: { bulletin: $data,
-                                             versionId: versionId,
-                                             userInfo: userInfo,
-                                             fileuploadService: fileuploadService } }"></div>
-      <!-- /ko -->
-      <!-- ko if: !authenticated() -->
-      <div class="container">
-        <div data-bind="component: { name: 'vetuma-init',
-                                     params: vetumaParams }"></div>
-      </div>
+      <!-- ko if: canCommentCurrentBulletin -->
+        <!-- ko if: authenticated -->
+        <div data-bind="component: { name: 'bulletin-comment',
+                                     params: { bulletin: $data,
+                                               versionId: versionId,
+                                               userInfo: userInfo,
+                                               fileuploadService: fileuploadService } }"></div>
+        <!-- /ko -->
+        <!-- ko if: !authenticated() -->
+        <div class="container">
+          <div data-bind="component: { name: 'vetuma-init',
+                                       params: vetumaParams }"></div>
+        </div>
+        <!-- /ko -->
       <!-- /ko -->
 
     </script>
