--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
@@ -1,15 +1,16 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="bulletin-tab-template">
 
-  <div data-bind="component: {name: 'publish-application',
-                              params: {appId: appId,
-                                       appState: appState,
-                                       authModel: authModel,
-                                       bulletin: bulletin,
-                                       bulletinStates: LUPAPISTE.config.bulletinStates}}"></div>
+  <div class="bulletin-component" data-bind="component: {name: 'publish-application',
+                                                         params: {appId: appId,
+                                                         appState: appState,
+                                                         authModel: authModel,
+                                                         bulletin: bulletin,
+                                                         bulletinStates: LUPAPISTE.config.bulletinStates}}"></div>
   <!-- ko if: showVersions -->
-  <div data-bind="component: {name: 'bulletin-versions',
-                              params: {appId: appId,
-                                       authModel: authModel,
-                                       bulletin: bulletin}}"></div>
+  <div class="bulletin-component" data-bind="component: {name: 'bulletin-versions',
+                                                         params: {appId: appId,
+                                                                  authModel: authModel,
+                                                                  bulletin: bulletin}}"></div>
   <!-- /ko -->
+
 </script>
