--- a/resources/private/create/map-popup.html
+++ b/resources/private/create/map-popup.html
@@ -14,8 +14,7 @@
          <div class="form-entry">
            <label class="form-label" data-bind="ltext: 'newRequest.propertyId'"></label>
            <input data-bind="textInput: propertyIdHumanReadable,
-                             enable: useManualEntry,
-                             readonly: !lupapisteApp.models.currentUser.isAuthority()"
+                             readonly: !lupapisteApp.models.currentUser.isAuthority() || !useManualEntry()"
                   data-test-id="create-property-id" type="text"
                   class="form-input text bottom-marginM">
          </div>
