--- a/resources/private/create/map-popup.html
+++ b/resources/private/create/map-popup.html
@@ -24,7 +24,7 @@
 
          <div >
            <label class="form-label" data-bind="ltext: 'newRequest.municipality'"></label>
-           <span data-bind="text: municipalityName, attr: {'data-text-value': municipalityCode}" data-test-id="create-municipality-select"></span>
+           <span data-bind="text: municipalityName, attr: {'data-test-value': municipalityCode}" data-test-id="create-municipality-select"></span>
          </div>
 
 
