--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
@@ -1,16 +1,25 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="bulletin-tab-template">
 
+  <!-- ko if: showPublishing -->
   <div class="bulletin-component" data-bind="component: {name: 'publish-application',
                                                          params: {appId: appId,
                                                          appState: appState,
                                                          authModel: authModel,
                                                          bulletin: bulletin,
                                                          bulletinStates: LUPAPISTE.config.bulletinStates}}"></div>
+  <!-- /ko -->
+
   <!-- ko if: showVersions -->
   <div class="bulletin-component" data-bind="component: {name: 'bulletin-versions',
                                                          params: {appId: appId,
                                                                   authModel: authModel,
-                                                                  bulletin: bulletin}}"></div>
+                                                                  bulletin: bulletin,
+                                                                  showVersionComments: showVersionComments}}"></div>
   <!-- /ko -->
 
+  <!-- ko if: showVersionComments -->
+  <div class="bulletin-component" data-bind="component: {name: 'bulletin-comments',
+                                                         params: {showVersionComments: showVersionComments,
+                                                                  bulletin: bulletin}}"></div>
+  <!-- /ko -->
 </script>
