--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
@@ -164,7 +164,8 @@
           </label>
         </div>
         <div class="row">
-          <button type="submit" class="positive" data-bind="disable: isSubmitDisabled,
+          <button type="submit" class="positive" data-test-id="send-comment"
+                  data-bind="disable: isSubmitDisabled,
                                                             css: {waiting: pending}">
             <i class="lupicon-comment"></i>
             <i class="wait spin lupicon-refresh"></i>
