add robot for filling out other receiver contact info

--- a/resources/private/ui-components/input/checkbox-field-template.html
+++ b/resources/private/ui-components/input/checkbox-field-template.html
@@ -5,7 +5,7 @@
     <script type="text/x-jquery-tmpl" id="checkbox-field-template">
       <div class="col--horizontal checkbox-wrapper" data-bind="css: {disabled: disable}">
         <input type="checkbox"
-               data-bind="checked: value, attr: {id: id, name: id}, disable: disable" />
+               data-bind="checked: value, attr: {id: id, name: id, 'data-test-id': id}, disable: disable" />
         <label class="inline-label checkbox-label" data-bind="text: label, attr: {'for': id}"></label>
       </div>
     </script>
