--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
@@ -57,12 +57,13 @@
             <div data-bind="component: {name: 'checkbox-field',
                                         params: {value: otherReceiver,
                                                  id: 'otherReceiver',
+                                                 'data-test-id': 'otherReceiver',
                                                  lLabel: 'bulletin.comment.otherReceiver'}}"></div>
           </div>
         </div>
 
         <!-- ko with: otherReceiverInfo -->
-        <div class="row" data-bind="slider: $component.otherReceiver">
+        <div class="row" data-bind="slider: $component.otherReceiver" data-test-id="other-receiver-row">
           <div class="col-4">
             <div class="form-grid form-grid--no-border">
               <div class="row row--no-margin">
