--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -172,6 +172,9 @@
                     <input type="checkbox" id="attachment-is-verdict-attachment" class="form-input" data-test-id="is-verdict-attachment"
                            data-bind="checked: isVerdictAttachment, enable: $root.authorization.ok('set-attachments-as-verdict-attachment')"/>
                   </div>
+                  <div class="col2 attachment-info-field">
+                    <input type="checkbox"class="form-input" data-bind="checked: visibility"/>
+                  </div>
 
                   <div data-bind="if: features.enabled('arkistointi') && latestVersion">
                     <div class="feature archive-valid" data-bind="with: latestVersion">
