--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1098,10 +1098,62 @@
                                              params: {lhtml: 'help.' + permitType() + '.statementsDesc' }
                                              }"></span>
                             <div data-bind="template: {name: 'statements-template', data: {statements: $data.statements, localisationKeys: {missing: 'application.statement.missing'}}}"></div>
-                            <button data-bind="click: $root.requestForStatementModel.openDialog, ltext: 'application.statement.add', visible: $root.authorization.ok('request-for-statement')"
+                            <button data-bind="click: $root.requestForStatementModel.toggleInviteSection, visible: $root.authorization.ok('request-for-statement') && !$root.requestForStatementModel.showInviteSection()"
                                     class="positive modal"
                                     data-test-id="add-statement">
+                              <i class="lupicon-circle-plus"></i>
+                              <span data-bind="ltext: 'application.statement.add'"></span>
                             </button>
+
+                          <div data-bind="if: $root.requestForStatementModel.showInviteSection" id="invite-statement-givers-section">
+                            <div data-bind="with: $root.requestForStatementModel">
+
+                                <h2 data-bind="ltext: 'application-choose-statement-givers'"></h2>
+
+                                <table class="table table-striped" data-test-id="table-application-statements-givers">
+                                    <tbody data-bind="foreach: data()">
+                                        <tr class="statement-row">
+                                            <td>
+                                                <input class="form-input" type="checkbox" data-test-id="check-statement-giver"
+                                                       data-bind="value: id,
+                                                                  checked: $root.requestForStatementModel.personIds,
+                                                                  attr: {'id': id,
+                                                                         'data-test-id': 'check-statement-giver-' + $index()}" />
+                                            </td>
+                                            <td data-bind="text: text()"></td>
+                                            <td data-bind="text: name()"></td>
+                                            <td data-bind="text: email()"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                                <label data-bind="ltext: 'application.invite-statement-giver-saateText'" for="invite-statement-giver-saateText" class="form-label form-label-text tip"></label>
+                                <textarea id="invite-statement-giver-saateText" rows=10 class="form-input textarea really-long high"
+                                          data-bind="textInput: saateText, attr: {placeholder: loc('application.invite-statement-giver-saateText-placeholder')}"></textarea>
+
+
+                                <label class="form-label tip" data-bind="ltext: 'add-statement-giver-maaraaika'" for="add-statement-giver-maaraaika"></label>
+                                <input type="text" class="form-input" data-bind="datepicker: maaraaika" id="add-statement-giver-maaraaika"></input>
+
+                                <button data-bind="click: $root.requestForStatementModel.toggleInviteSection"
+                                        class="neutral modal"
+                                        data-test-id="cancel-add-statement-giver">
+                                    <i class="lupicon-remove"></i>
+                                    <span data-bind="ltext: 'cancel'"></span>
+                                </button>
+
+                                <button data-bind="click: $root.requestForStatementModel.send, disable: disabled"
+                                        class="positive modal"
+                                        data-test-id="add-statement-giver">
+                                  <i class="lupicon-circle-check"></i>
+                                  <span data-bind="ltext: 'application.statement.add'"></span>
+                                </button>
+
+                              <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/img/ajax-loader-12.gif" alt="..." width="12" height="12"/>
+
+                            </div>
+                          </div>
+
                         </div>
 
                         <div data-bind="with: application" class="application-neighbors">
@@ -1481,24 +1533,24 @@
                     </div>
                 </div>
 
-                <div id="dialog-request-for-statement" class="window autosized">
-                    <div class="dialog-header">
-                        <p data-bind="ltext: 'application.statement.add'"></p>
-                        <p class="dialog-close close lupicon-remove"></p>
-                    </div>
-                    <div class="dialog-content" data-bind="with: $root.requestForStatementModel">
-                        <div data-bind="foreach: data()" class="scrolling-content">
-                            <input class="form-input" type="checkbox" data-test-id="check-statement-giver"
-                                   data-bind="value: id, checked: $root.requestForStatementModel.personIds, attr: {'id': id, 'data-test-id' : 'check-statement-giver-' + $index()}" />
-                            <label data-bind="text: text()+' '+name() + ' (' + email() + ')', attr: {'for': id}" class="form-label"></label><br/>
-                        </div>
-                        <button data-bind="click: send, ltext: 'application.statement.send', disable: disabled"
-                                class="btn btn-primary modal"
-                                data-test-id="add-statement-giver">
-                        </button>
-                        <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/img/ajax-loader-12.gif" alt="..." width="12" height="12"/>
-                    </div>
-                </div>
+<!--                 <div id="dialog-request-for-statement" class="window autosized"> -->
+<!--                     <div class="dialog-header"> -->
+<!--                         <p data-bind="ltext: 'application.statement.add'"></p> -->
+<!--                         <p class="dialog-close close lupicon-remove"></p> -->
+<!--                     </div> -->
+<!--                     <div class="dialog-content" data-bind="with: $root.requestForStatementModel"> -->
+<!--                         <div data-bind="foreach: data()" class="scrolling-content"> -->
+<!--                             <input class="form-input" type="checkbox" data-test-id="check-statement-giver" -->
+<!--                                    data-bind="value: id, checked: $root.requestForStatementModel.personIds, attr: {'id': id, 'data-test-id' : 'check-statement-giver-' + $index()}" /> -->
+<!--                             <label data-bind="text: text()+' '+name() + ' (' + email() + ')', attr: {'for': id}" class="form-label"></label><br/> -->
+<!--                         </div> -->
+<!--                         <button data-bind="click: send, ltext: 'application.statement.send', disable: disabled" -->
+<!--                                 class="btn btn-primary modal" -->
+<!--                                 data-test-id="add-statement-giver"> -->
+<!--                         </button> -->
+<!--                         <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/img/ajax-loader-12.gif" alt="..." width="12" height="12"/> -->
+<!--                     </div> -->
+<!--                 </div> -->
 
                 <div id="dialog-add-attachment-templates" class="window autosized selectm-dialog">
                     <div class="dialog-header">
