--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
@@ -8,6 +8,7 @@
       <h1 data-bind="ltext: 'bulletin.comments.title'"></h1>
       <span data-bind="component: { name: 'help-toggle', params: { lhtml: 'help.bulletin.comments' } }"></span>
     </div>
+    <p data-bind="text: proclaimedHeader"></p>
   </div>
 
   <!-- ko foreach: comments -->
